--- a/ePhys_analysis.ipynb
+++ b/ePhys_analysis.ipynb
@@ -24,6 +24,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a1f6558",
+   "metadata": {},
+   "source": [
+    "Path to directory with your ABF files. Change the path to your directory as appropriate. Include only Current Step protocols. This code is wriiten for current steps starting at -100pA increasing by 10pA each step. The current input starts at 0.025s and runs for 0.5 seconds. You may need to adjust other parts of the code to account for diiferent step protocols."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "15013db3-0196-4d29-9102-28e3de380f03",
@@ -46,6 +54,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fada0dbf",
+   "metadata": {},
+   "source": [
+    "Add all your ABF files into the directory prior to running code. Make sure you change the directory name to your directory. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "653d0af4-709a-4ddb-906b-ebbe0fbf423b",
@@ -56,6 +72,14 @@
     "directory = \"your_directory\"\n",
     "abf_files = [f for f in os.listdir(directory) if f.endswith(\".abf\")]\n",
     "abf_files #print names of abf files in directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7611c730",
+   "metadata": {},
+   "source": [
+    "Initialize a DataFrame with the features the code is extracting. "
    ]
   },
   {
@@ -70,17 +94,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e231a5b1",
+   "metadata": {},
+   "source": [
+    "Set time ranges for each part of current step protocol. Adjust as needed if you use a different current step protocol. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ba669ac3-ebdd-4004-8d39-9feafecf6c6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_range1 = (0, 0.025)\n",
-    "x_range2 = (0.4, 0.499)\n",
-    "x_range3 = (0.03, 0.3)\n",
-    "x_range4 = (0.525, 1.025)\n",
-    "x_range5 = (0.025, 0.525)"
+    "x_range1 = (0, 0.025) #the time before current input\n",
+    "x_range2 = (0.4, 0.499) #the last 100ms of the current input\n",
+    "x_range3 = (0.03, 0.3) #the beggining of the current input\n",
+    "x_range4 = (0.525, 1.025) #the time after current input \n",
+    "x_range5 = (0.025, 0.525) #the time range for the current input "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7175399",
+   "metadata": {},
+   "source": [
+    "The 'for' loop below goes through each ABF file, extracts the features, and adds the data to the dataframe. "
    ]
   },
   {
@@ -181,6 +221,14 @@
     "    results = pd.concat([results, sweep_result], axis=0, ignore_index=True)\n",
     "\n",
     "print (results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34d22df6",
+   "metadata": {},
+   "source": [
+    "Save your DataFrame as a CSV. Make sure to change the filename to suit your needs. "
    ]
   },
   {
